--- a/content/real-world-examples/authentication/login-errors.mdx
+++ b/content/real-world-examples/authentication/login-errors.mdx
@@ -39,7 +39,7 @@ Once redirected, we get the username input field, then typing in a user name of 
 cy.getBySel("signin-username").type("jdoe").find("input").clear().blur()
 ```
 
-We then `.find()` the input as the element we are actually selecting is a div that is wrapping our input.
+We then <apiLink apiName="find" displayName=".find()" /> the input as the element we are actually selecting is a div that is wrapping our input.
 
 We then clear the input field and trigger a blur event which triggers the validation.
 
