--- a/content/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range.mdx
+++ b/content/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range.mdx
@@ -212,7 +212,7 @@ transactions.forEach(({ createdAt }) => {
 })
 ```
 
-We then use `cy.log()` to output a custom message to the Cypress Command Log.
+We then use <apiLink apiName="log" displayName="cy.log()" /> to output a custom message to the Cypress Command Log.
 
 ```js
 cy.log("Clearing date range filter. Data set should revert")
