--- a/content/real-world-examples/user-settings/user-setting-form-errors.mdx
+++ b/content/real-world-examples/user-settings/user-setting-form-errors.mdx
@@ -51,7 +51,7 @@ First, we are looping through an array of two strings to find the firstName and 
 })
 ```
 
-We then instruct Cypress to use `.type()` to enter "Abc" into each input, clear the input, and trigger the blur event on the input. We then assert that the validation error is triggered and contains the correct error message.
+We then instruct Cypress to use <apiLink apiName="type" displayName=".type()" /> to enter "Abc" into each input, clear the input, and trigger the blur event on the input. We then assert that the validation error is triggered and contains the correct error message.
 
 ![](/images/real-world-examples/user-settings/user-setting-form-errors/Screen_Shot_2021-06-29_at_1.29.56_PM.png)
 
