--- a/content/real-world-examples/bank-accounts/bank-accounts-overview-and-setup.mdx
+++ b/content/real-world-examples/bank-accounts/bank-accounts-overview-and-setup.mdx
@@ -53,13 +53,13 @@ The first thing we are doing is seeding our database using a custom Cypress task
 cy.task("db:seed")
 ```
 
-Next, we use `cy.intercept()` to intercept every **GET** request to the **/notifications** route. We are then aliasing this intercept to "getNotifications." When you see `@getNotifications` used within a test, it is referring to this intercept.
+Next, we use <apiLink apiName="intercept" displayName="cy.intercept()" /> to intercept every **GET** request to the **/notifications** route. We are then aliasing this intercept to "getNotifications." When you see `@getNotifications` used within a test, it is referring to this intercept.
 
 ```js
 cy.intercept("GET", "/notifications").as("getNotifications")
 ```
 
-Next, we have another `cy.intercept()` to intercept every **POST** request to our GraphQL endpoint. We then have three conditionals to determine the GraphQL query and then set the appropriate alias accordingly.
+Next, we have another <apiLink apiName="intercept" displayName="cy.intercept()" /> to intercept every **POST** request to our GraphQL endpoint. We then have three conditionals to determine the GraphQL query and then set the appropriate alias accordingly.
 
 ```js
 cy.intercept("POST", apiGraphQL, (req) => {
