--- a/content/real-world-examples/new-transactions/searching-by-attributes.mdx
+++ b/content/real-world-examples/new-transactions/searching-by-attributes.mdx
@@ -123,7 +123,7 @@ const targetUser = ctx.allUsers![2];
 
 ```
 
-We then use `cy.log()` to output a custom message to the Cypress Command Log in the test runner. This makes it easy for us to see what is happening in the test runner and is helpful for debugging.
+We then use <apiLink apiName="log" displayName="cy.log()" /> to output a custom message to the Cypress Command Log in the test runner. This makes it easy for us to see what is happening in the test runner and is helpful for debugging.
 
 ```js
 cy.log(`Searching by **${attr}**`)
