--- a/content/real-world-examples/notifications/notifications-overview-and-setup.mdx
+++ b/content/real-world-examples/notifications/notifications-overview-and-setup.mdx
@@ -34,7 +34,7 @@ First, we are using a custom Cypress task to seed our database.
 cy.task("db:seed")
 ```
 
-Then, we are using `cy.intercept()` to intercept several requests and aliasing them to be used later on within our tests.
+Then, we are using <apiLink apiName="intercept" displayName="cy.intercept()" /> to intercept several requests and aliasing them to be used later on within our tests.
 
 ```js
 cy.intercept("GET", "/notifications*").as("getNotifications")
