--- a/content/real-world-examples/transaction-feeds/transaction-feeds-overview-and-setup.mdx
+++ b/content/real-world-examples/transaction-feeds/transaction-feeds-overview-and-setup.mdx
@@ -34,7 +34,7 @@ The `feedViews` object contains various information for the different views depe
 
 - The `tab` property is the name of the selector we will use to grab the correct element.
 - The `tabLabel` is the text contained within the `<label>` element for the tab.
-- The `routeAlias` is the alias name we are using for `cy.intercept()`
+- The `routeAlias` is the alias name we are using for <apiLink apiName="intercept" displayName="cy.intercept()" />
 - The `service` is the name of the service we are using for a custom Cypress command `cy.nextTransactionFeedPage(feed.service, pageData.totalPages);` around line **203**.
 
 ## beforeEach()
@@ -65,7 +65,7 @@ First, we are using a custom Cypress task to seed our database.
 cy.task("db:seed")
 ```
 
-Next, we use `cy.intercept()` to intercept various requests and alias them using the data within the `feedViews` object.
+Next, we use <apiLink apiName="intercept" displayName="cy.intercept()" /> to intercept various requests and alias them using the data within the `feedViews` object.
 
 ```js
 cy.intercept("GET", "/notifications").as("notifications")
