updated instructions in todomvc install to clone repo instead of fork. updated screenshots too

--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -4,28 +4,15 @@ The application we will be writing tests for can be found [here](https://github.
 
 ## Install
 
-The first thing you should do is fork this repo into your own GitHub account. You can do this by clicking the "fork" button in the upper right-hand corner of the repo.
-
-![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-09-16_at_1.58.28_PM.png)
-
-Once the application is forked, you should see it in your own GitHub account. It should look very similar to this, only with your GitHub username.
-
-![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-09-16_at_1.58.48_PM.png)
-
-Now that we have forked the repo, we need to clone it down to our local machine. To do this, click on the green "Code" button then copy the address,
+The first thing you need to do is to clone the [TodoMVC repo](https://github.com/cypress-io/cypress-realworld-testing-todomvc).
 
 ```bash
-https://github.com/YOUR_GITHUB_USERNAME/cypress-example-todomvc
+git clone git@github.com:cypress-io/cypress-realworld-testing-todomvc.git
 ```
 
-![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-06-24_at_10.55.46_AM.png)
+You can also download a .zip file of the repo by clicking on the green "Code" button and then "Download Zip."
 
-Next, you will need to clone the repo to your local machine via git.
-
-```bash
-# Your URL will be different and should contain your username
-git clone https://github.com/robertguss/cypress-example-todomvc
-```
+![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-10-21_at_10.13.11-AM.png)
 
 Next, you will need to open the repo in your text editor. We will be using [VS Code](https://code.visualstudio.com/), but feel free to use any text editor you like.
 
