updated installing cypress lesson

--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
@@ -21,6 +21,10 @@ Next we will add a custom npm script so we can launch Cypress easily. The entire
 
 Before we run our new script, make sure also to have the application running in a separate terminal window. It is vital to have the application up and running as Cypress cannot execute any tests without it.
 
+If you are using VSCode, you can open the built in terminal with (crtl+` on Mac/Win). Or you can click on View > Terminal in the menu at the top.
+
+In your terminal enter the following command to start the app.
+
 ```bash
 yarn start
 ```
@@ -30,7 +34,7 @@ yarn start
 Let's now start Cypress so that it can create the directories and files within our project.
 
 ```bash
-yarn cypress: open
+yarn cypress:open
 ```
 
 ![](/images/testing-your-first-application/installing-cypress-and-writing-our-first-test/Screen_Shot_2021-09-17_at_10.09.40_AM.png)
