--- a/content/courses/testing-your-first-application/testing-what-isnt-there.mdx
+++ b/content/courses/testing-your-first-application/testing-what-isnt-there.mdx
@@ -37,8 +37,12 @@ it("does NOT display the footer or todo-list when there are no todos", () => {
 })
 ```
 
-# Practice
+## Practice
 
-For additional practice checkout the **cypress/integration/practice/practice.spec.js** file. This file contains several tests, with helpful comments, to help you put into practice all of the concepts you have learned so far.
+For additional practice checkout the **cypress/integration/practice/practice.spec.js** file in the TodoMVC repo. This file contains several tests, with helpful comments, to help you put into practice all of the concepts you have learned so far.
 
 Should you get stuck or need some help, all of the answers are provided within **cypress/integration/final/practice.spec.js**
+
+## Wrap Up
+
+Congrats! You have finished the first course of Real World Testing with Cypress. In the next course you will learn all of the fundamentals you need to write great tests.
