--- a/content/courses/testing-foundations/who-should-be-responsible-for-testing.mdx
+++ b/content/courses/testing-foundations/who-should-be-responsible-for-testing.mdx
@@ -10,10 +10,12 @@ Companies with dedicated development and QA teams typically leave the software d
 
 ## 2. Designer, Developer, QA, etc.
 
-Some companies will have small teams comprised of a developer, designer, QA engineer, etc., all working together on a single project or feature. In this scenario, the developer is responsible for the code, and QA is responsible for testing.
+Some companies will have small teams comprised of a developer, designer, QA engineer, etc., all working together on a single project or feature. In this scenario, the developer is typically responsible for the code, and QA is usually responsible for testing.
 
 ## 3. Fullstack Solo Developer
 
 Some companies, like early-stage startups, do not have dedicated QA teams and put all of the testing responsibility on the developers. The developers are responsible for writing the code and ensuring that it works as expected.
 
-While most companies and teams have dedicated QA engineers, everyone is responsible for ensuring that an application is working as intended.
+While many companies and teams have dedicated QA engineers, everyone is responsible for ensuring that an application is working as intended.
+
+In order to ship reliable, high quality software, testing should be everyone's responsibility and should be at the thought process of the entire team at the start of a project.
