--- a/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
+++ b/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
@@ -59,3 +59,7 @@ If you would like to practice how to to use JavaScript in Cypress, we have creat
 The practice file you are looking for can be found in **cypress/integration/Practice/just-javascript.spec.js**.
 
 Should you get stuck or need some help, all of the answers are provided within **cypress/integration/Answers/just-javascript.spec.js**
+
+## Wrap Up
+
+Congrats! You have finished the third course of Real World Testing with Cypress. In the next course you will learn some of the more advanced concepts in Cypress that take your tests to the next level.
