--- a/content/courses/cypress-fundamentals/waiting-and-retry-ability.mdx
+++ b/content/courses/cypress-fundamentals/waiting-and-retry-ability.mdx
@@ -21,7 +21,7 @@ cy.get("table").find("tr").as("rows")
 
 This will get the `<table>` HTML element, find all of the `<tr>` elements, and allow us to reference them as `@rows` throughout our tests.
 
-We can access our alias using <apiLink apiName="get" displayName="cy.get()" /> but putting the `@` character before our alias name, like so:
+We can access our alias using <apiLink apiName="get" displayName="cy.get()" /> by putting the `@` character before our alias name, like so:
 
 ```js
 // Reference Cypress Alias `rows`
