--- a/content/courses/advanced-cypress-concepts/database-initialization-and-seeding.mdx
+++ b/content/courses/advanced-cypress-concepts/database-initialization-and-seeding.mdx
@@ -43,7 +43,7 @@ This method involves writing raw queries, like SQL, to populate your database wi
 
 **Pros**
 
-- relies on the backend to manage the data
+- Relies on the backend to manage the data
 - more reliable way to get your data
 - faster than using the UI to initialize the data, i.e., the method listed above
 - re-use backend logic, i.e., using an ORM or methods to obtain data from the backend for testing purposes. This is only possible if your front end and backend are in the same repo.
