--- a/content/courses/advanced-cypress-concepts/database-initialization-and-seeding.mdx
+++ b/content/courses/advanced-cypress-concepts/database-initialization-and-seeding.mdx
@@ -50,7 +50,7 @@ This method involves writing raw queries, like SQL, to populate your database wi
 
 **Cons**
 
-- requires network interaction to get the data, possible issues with latency
+- Requires network interaction to get the data, possible issues with latency
 - requires maintenance when your data model changes
 - potential security issues with PII may need to anonymize data
 
