--- a/content/courses/advanced-cypress-concepts/database-initialization-and-seeding.mdx
+++ b/content/courses/advanced-cypress-concepts/database-initialization-and-seeding.mdx
@@ -67,7 +67,7 @@ This method involves utilizing special APIs set up to generate the data you need
 
 **Cons**
 
-- could potentially expose PII
+- Could potentially expose PII
 - may potentially need extra security measures if these endpoints are public-facing
 
 ## Database dump or import
